Added notes from performance lecture.

--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,7 @@
 \usepackage{booktabs}
 \usepackage{minted}
 \usepackage{framed}
+\usepackage{calc}
 
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{5pt}
@@ -39,6 +40,7 @@
 \pagenumbering{arabic}
 
 % include topic files
+\include{performance}
 \include{arithmetic}
 
 \end{document}
