--- a/arithmetic.tex
+++ b/arithmetic.tex
@@ -1,18 +1,26 @@
 \section{Arithmetic}
 
 \subsection{Floating Point Numbers}
+Floating point numbers consist of 1 sign bit, an exponent bias, an implied 1 bit (which we will understand from the example conversion below) and finally the fractional part of the number.
 \begin{figure}[H]
 \centering
 \begin{tikzpicture}
     \draw (0,0) -- (13,0);
-    \draw (0,1) -- (13,1);
+    \draw (0,0.5) -- (13,0.5);
     \foreach \x in {0,1,6,7,13}
-        \draw (\x,0) -- (\x,1);
-    \node at (0.5,0.5) {\texttt{S}};
-    \node at (3.5,0.5) {\texttt{E-Bias}};
-    \node at (6.5,0.5) {\texttt{1}};
-    \node at (10,0.5) {\texttt{Fraction}};
-\end{tikzpicture}    
+        \draw (\x,0) -- (\x,0.5);
+    \foreach \x/\text in {0.5/S, 3.5/E-Bias, 6.5/1, 10/Fraction}
+        \node at (\x,0.25) {\texttt{\text}};
+    % IEEE standard
+    \node at (-1,-0.75) {IEEE};
+    \draw (0,-0.5) -- (13,-0.5);
+    \draw (0,-1) -- (13,-1);
+    \foreach \x in {0,1,6,7,13}
+        \draw (\x,-0.5) -- (\x,-1);
+    \foreach \x/\text in {0.5/[1], 3.5/[8], 6.5/[1], 10/[23]}
+        \node at (\x,-0.75) {\texttt{\text}};    
+\end{tikzpicture}
+\caption{Floating point number representation. }
 \end{figure}
 
 \subsection{Converting Decimal to Floating Point}
@@ -47,7 +55,7 @@ $\therefore 2.625_{10} = \boxed{0}\boxed{10000000}\boxed{01010000000000000000000
 \end{framed}
 
 \subsection{Adders}
-\subsubsection{Ripple Adder}
+\subsubsection*{Ripple Adder}
 An $n$-bit ripple adder is constructed by cascading $n$ full adder cells. The size of this is proportional to the number of cells you have. However since cell $n+1$ takes the carry bit from the previous addition the delay will also be proportional to $n$.
 
 \begin{figure}[H]
@@ -56,7 +64,7 @@ An $n$-bit ripple adder is constructed by cascading $n$ full adder cells. The si
     \caption{Cascading full adders.}
 \end{figure}
 
-\subsubsection{Carry--Lookahead Adder}
+\subsubsection*{Carry--Lookahead Adder}
 A carry-lookahead adder works by calculating the carry of each adding stage separately. This makes the delay constant regardless of the number of bits but also  low (only chip propagation delays). However each stage is geometrically larger than the previous and it is said that $\mbox{size} \propto n^2$.
 
 % TODO: carry-lookahead schematic
